MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/MicroTrigger_Async_Event__e.object-meta.xml
<CustomObject>
    <description>104904 A platform event emitted when the MicroTrigger Custom Metadata type has Is_Async__c true</description>
    <label>MicroTrigger Async Event</label>
    <pluralLabel>MicroTrigger Async Events</pluralLabel>
</CustomObject>