MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>104904 The trigger event</description>
    <label>Event</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>