MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/MicroTrigger_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>MicroTrigger_Type_Name__c</fullName>
    <description>104904 The MicroTrigger Type Name</description>
    <label>MicroTrigger Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>