MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_Name__c</fullName>
    <description>104904 The SObject name</description>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>