MicroTriggerFramework/main/default/objects/MicroTrigger_Async_Event__e/fields/Trigger_Size__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Size__c</fullName>
    <description>104904 The size of the trigger</description>
    <label>Trigger Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>